<?xml version="1.0"?>
<package>
  <name>ros_whillpy</name>
  <version>0.0.1</version>
  <description>Unofficial ROS package for WHILL Model CK control</description>
  <maintainer email="joshi.ravi-prakash869@mail.kyutech.jp">Ravi Joshi</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ravijo/ros_whillpy</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <export>
  </export>
</package>
